--- a/project1.html
+++ b/project1.html
@@ -7,17 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="navbar">
-<ul>
-    <li><a class="navbar2" href="#"> Home </a></li>
-    <li style="float:right"><a class="navbar2" href= "#"> Projects </a></li>
-</ul>
-  </div>
-  <br>
-    </div>
     <div id="header">
-        <h1> Earl's Portfolio </h1>
+        <h1> Project 1</h1>
     </div>
-    <img src="" alt="">
 </body>
 </html>
