Navigation bar almost done
Just working on adding font next and Im just saving so I don't do die

--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="navbar">
+    <div class="navbar">
 <ul>
     <li><a class="navbar2" href="#"> Home </a></li>
     <li style="float:right"><a class="navbar2" href= "#"> Projects </a></li>
 </ul>
   </div>
-  <br>
+  <br >
     </div>
-    <div id="header">
+    <div class="header">
         <h1> Earl's Portfolio </h1>
     </div>
     <img src="" alt="">
