--- a/index.html
+++ b/index.html
@@ -10,14 +10,22 @@
     <div class="navbar">
 <ul>
     <li><a class="navbar2" href="#"> Home </a></li>
-    <li style="float:right"><a class="navbar2" href= "#"> Projects </a></li>
+    <div style="float:right" class="dropdown">
+        <button class="dropbtn">Dropdown
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+          <a href="#">Link 1</a>
+          <a href="#">Link 2</a>
+          <a href="#">Link 3</a>
+        </div>
+    <li style="float:right"><a class="navbar2" id="projectdropdown" href= "#"> Projects </a></li>
 </ul>
-  </div>
-  <br >
     </div>
     <div class="header">
+        <img id="JeskoAttack"src="JeskoAttack.jpg" alt="Koenigsegg-Jesko-Attack">
         <h1> Earl's Portfolio </h1>
     </div>
-    <img src="" alt="">
+    
 </body>
 </html>
