--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 <body>
     <div class="navbar">
 <ul>
-    <li><a class="navbar2" href="#"> Home </a></li>
-    <div style="float:right" class="dropdown">
+    <li><a class="navbar2" href="index.html"> Home </a></li>
+    <div style="float:right" id="projectdropdown" class="dropdown">
         <button class="dropbtn">Dropdown
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-          <a href="#">Link 1</a>
-          <a href="#">Link 2</a>
-          <a href="#">Link 3</a>
+          <a href="project1.html">Project 1</a>
+          <a href="#">Project 2</a>
+          <a href="#">Project 3</a>
+          <a href="index.html"> Home </a>
         </div>
-    <li style="float:right"><a class="navbar2" id="projectdropdown" href= "#"> Projects </a></li>
 </ul>
     </div>
     <div class="header">
