navbar to project 1

--- a/project1.html
+++ b/project1.html
@@ -7,6 +7,21 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="navbar">
+<ul>
+    <li><a class="navbar2" href="project1.html"> Project 1 </a></li>
+    <div style="float:right" id="projectdropdown" class="dropdown">
+        <button class="dropbtn">Projects
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+        <a href="project1.html">Project 1</a>
+        <a href="#">Project 2</a>
+        <a href="#">Project 3</a>
+        <a href="index.html"> Home </a>
+        </div>
+</ul>
+            </div>
     <div id="header">
         <h1> Project 1</h1>
     </div>
