--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <ul>
     <li><a class="navbar2" href="index.html"> Home </a></li>
     <div style="float:right" id="projectdropdown" class="dropdown">
-        <button class="dropbtn">Dropdown
+        <button class="dropbtn">Projects
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-          <a href="project1.html">Project 1</a>
-          <a href="#">Project 2</a>
-          <a href="#">Project 3</a>
-          <a href="index.html"> Home </a>
+        <a href="project1.html">Project 1</a>
+        <a href="#">Project 2</a>
+        <a href="#">Project 3</a>
+        <a href="index.html"> Home </a>
         </div>
 </ul>
     </div>
