Finished Project 1 Page, working on Development

--- a/project1.html
+++ b/project1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Project 1</title>
 </head>
 <body>
     <div class="navbar">
@@ -23,33 +23,29 @@
 </ul>
     <div class="header">
         <h1> Project 1</h1>
-        <h4> Earl's Portfolio</h4>
+        <h4 > Earl's Portfolio</h4>
         </div>
         <div class="vertical-menu">
-            <h1> Shortcut </h1>
-            <a href="#" class="">1. Overview</a>
-            <a href="#">2. End user</a>
-            <a href="#">3. Requirements</a>
-            <a href="#">4. Implications</a>
+            <h1 > Shortcut </h1>
+            <a href="#overviewlink">1. Overview</a>
+            <a href="#enduserslink">2. End user</a>
+            <a href="#requirementslink">3. Requirements</a>
+            <a id="overviewlink" href="#implicationslink">4. Implications</a>
+            <a href="#developmentlink">5. Development</a>
         </div>
     <div class="overview">
         <h1>Overview</h1>
         <img id="JeskoAttack" src="JeskoAttack.jpg">
-        <p>This website shows the projects I created in year 11, including design considerations and development. 
+        <p id="enduserslink">This website shows the projects I created in year 11, including design considerations and development. 
         </p>
     </div>
-<div class="breakline">
-<br>
-<br>
-<br>
-</div>
     <div class="endusers">
-        <h1>End Users</h1>
+        <h1 id="requirementslink">End Users</h1>
         <p>This website is targeted to want to know about my abilities in my digital technology knowledge.
              </p>
     </div>
     <div class="requirements">
-        <h1>Requirements</h1>
+        <h1 id="implicationslink">Requirements</h1>
         <p>Homepage
             Title
             Background image
@@ -74,7 +70,7 @@
              </p>
     </div>
     <div class="implications">
-        <h1>Implications</h1>
+        <h1 id="developmentlink">Implications</h1>
 	 <p>Aesthetics
 Aesthetics is about making the outcome look and feel good.
 I will do this by creating smooth transitions and also using colours that match correctly
@@ -90,6 +86,9 @@ Usability is about making the outcome easy to use.
 I will do this by making the GUI as clean and aesthetic as possible which makes it easy to understand
 
         </p>
+    </div>
+    <div class="development">
+     <a href="development.html"><h1 id="developmenttext"> Development Page Link </h1></a>
     </div>
 </body>
 </html>
