--- a/project1.html
+++ b/project1.html
@@ -51,10 +51,10 @@
             Background image
             <br>
             
-            A page per project
+            <li>A page per project
             Section for Design Phase content
             Section for Development Phase content
-            Link to project
+            Link to project </li>
             <br>
             
             Navigation Bar
