--- a/development.html
+++ b/development.html
@@ -23,9 +23,9 @@
         </ul>
             </div>
             <div class="header">
-            <img id="JeskoAttack"src="JeskoAttack.jpg" alt="Koenigsegg-Jesko-Attack">
             <h1> Development </h1>
         </div>
+        <br>
         <div class="vertical-menu">
             <h1 > Shortcut </h1>
             <a href="#">1. 1</a>
@@ -37,6 +37,25 @@
             <a href="#">7. 7</a>
             <a href="#">8. 8</a>
             <a href="#">9. 9</a>
+        </div>
+        <div class="task">
+            <h1> Task 1 </h1>
+            <p> I did this task look</p>
+            <img id="JeskoAttack" src="JeskoAttack.jpg" alt="placeholder">
+        </div>
+
+        <div class="task">
+            <h1> Task 2 </h1>
+            <p> I did this task look</p>
+            <img id="JeskoAttack" src="JeskoAttack.jpg" alt="placeholder">
+            <br>
+            <p> I did more for this task look</p>
+            <img id="JeskoAttack" src="JeskoAttack.jpg" alt="placeholder">
+        </div>
+        <div class="task">
+            <h1> Task 3 </h1>
+            <p> I did this task look</p>
+            <img id="JeskoAttack" src="JeskoAttack.jpg" alt="placeholder">
         </div>
 </body>
 </html>
