--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Earl's Portfolio</title>
 </head>
-<body>
+<body id="index">
     <div class="navbar">
 <ul>
     <li><a class="navbar2" href="index.html"> Home </a></li>
@@ -23,7 +23,6 @@
 </ul>
     </div>
     <div class="header">
-        <img id="JeskoAttack"src="JeskoAttack.jpg" alt="Koenigsegg-Jesko-Attack">
         <h1> Earl's Portfolio </h1>
     </div>
     
