Development Done, Revamped most stuff
I finished Development Page and I also said; "man I don't like this look imma add something cooler instead" and so I did

--- a/project1.html
+++ b/project1.html
@@ -33,18 +33,18 @@
             <a id="overviewlink" href="#implicationsrequirementlink">4. Implications</a>
             <a href="#developmentlink">5. Development</a>
         </div>
-    <div class="overview">
+    <div id="text" class="overview">
         <h1>Overview</h1>
         <img id="JeskoAttack" src="JeskoAttack.jpg">
         <p id="enduserslink">This website shows the projects I created in year 11, including design considerations and development. 
         </p>
     </div>
-    <div class="endusers">
+    <div id="text" class="endusers">
         <h1 id="implicationsrequirementlink">End Users</h1>
         <p>This website is targeted to want to know about my abilities in my digital technology knowledge.
              </p>
     </div>
-    <div class="requirements">
+    <div id="text" class="requirements">
         <h1>Requirements</h1>
         <p> <h3>Homepage</h3>
             <br>
@@ -73,7 +73,7 @@
             Decently chosen spot on website 
              </p>
     </div>
-    <div class="implications">
+    <div id="text" class="implications">
         <h1>Implications</h1>
 	 <p><h2>Aesthetics</h2>
     <br>
@@ -94,8 +94,11 @@
 
         </p>
     </div>
-    <div class="development">
-     <a href="development.html" id="developmentlink"><h1 id="developmenttext"> Development Page Link </h1></a>
+    <div id="developmentlink" class="development">
+     <a id="text" href="development.html" ><h1> Development Page Link </h1></a>
     </div>
+    <video autoplay muted loop id="myVideo">
+        <source src="Porsche 911 992 GT3RS 2.mp4" type="video/mp4">
+      </video>
 </body>
 </html>
