--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <div class="header">
         <h1> Earl's Portfolio </h1>
     </div>
-    
+    <video autoplay muted loop id="myVideo">
+    <source src="Porsche 911 992 GT3RS 2.mp4" type="video/mp4">
+  </video>
 </body>
 </html>
