Project 1 - Low POly Character

--- a/development1.html
+++ b/development1.html
@@ -9,16 +9,16 @@
 <body>
     <div class="navbar">
         <ul>
-            <li><a class="navbar2" href="project1.html"> Project 1 </a></li>
+            <li><a class="navbar2" href="project1.html"> Low Poly Character </a></li>
             <div style="float:right" id="projectdropdown" class="dropdown">
                 <button class="dropbtn">Projects
                   <i class="fa fa-caret-down"></i>
                 </button>
                 <div class="dropdown-content">
-                <a href="project1.html">Project 1</a>
-                <a href="#">Project 2</a>
-                <a href="#">Project 3</a>
-                <a href="index.html"> Home </a>
+            <a href="project1.html">Project 1</a>
+            <a href="project2.html">Project 2</a>
+            <a href="project3.html">Project 3</a>
+            <a href="index.html"> Home </a>
                 </div>
         </ul>
             </div>
