Low Poly Character Update 2

--- a/project1.html
+++ b/project1.html
@@ -120,7 +120,7 @@
     <h4>Aesthetics is about making the outcome look and feel good. </h4> 
     <br>
    The look of the character is important aesthically because it is something that
-   makes my end users want to use the project I created. 
+   makes my end users want to use my low poly character I created. 
 <br>
 
 	<h3>Functionality</h3>
@@ -128,15 +128,16 @@
     <h4>Functionality is about ensuring the outcome works as its meant to.</h4> 
     <br>
     It should not be buggy and not cause any problems for my end users where they would
-    most likely use it a lot for their project. Any issues would hold their project back.
+    most likely use it a lot for their project. Any issues would hold their project back
+    and make end users less likely to use my low poly character.
 <br>
 
 	<h3>Usability</h3>
     <br>
     <h4>Usability is about making the outcome easy to use. </h4>
     <br>
-    Using my low poly character for your own project should be easy as pie for my end users 
-    where the instructions and the use of the low poly character is easy to understand and use.
+    Using my low poly character for your own project should be easy as pie for my end users. 
+    The instructions and the use of the low poly character is easy to understand and use.
 
 
         </p>
