--- a/project1.html
+++ b/project1.html
@@ -121,6 +121,9 @@
     <br>
    The look of the character is important aesthically because it is something that
    makes my end users want to use my low poly character I created. 
+   The model should not only be low poly, but resemble the models and limbs and should be
+   seen as what it is meant to be. This also helps me make the models and limbs with more
+   detail as it contributes to the aesthetics and 
 <br>
 
 	<h3>Functionality</h3>
@@ -129,7 +132,9 @@
     <br>
     It should not be buggy and not cause any problems for my end users where they would
     most likely use it a lot for their project. Any issues would hold their project back
-    and make end users less likely to use my low poly character.
+    and make end users less likely to use my low poly character. I will ensure it is not
+    buggy by running as many scenarios with the rigs as possible and also reviewing the 
+    code by the peer reviewing.
 <br>
 
 	<h3>Usability</h3>
@@ -137,7 +142,9 @@
     <h4>Usability is about making the outcome easy to use. </h4>
     <br>
     Using my low poly character for your own project should be easy as pie for my end users. 
-    The instructions and the use of the low poly character is easy to understand and use.
+    The instructions and the use of the low poly character is easy to understand and use. To 
+    ensure this, I will have the rigs as simple and easy to understand with minimal buggy code.
+    
 
 
         </p>
