implcations super dateup

--- a/project1.html
+++ b/project1.html
@@ -91,7 +91,7 @@
 
             <h3>Weapon(s)</h3>
             <br>
-            Cool particle effecs on the weapon(s) <br>
+            Cool particle effects on the weapon(s) <br>
             Fits the character aesthetics <br>
             Flows well with character animations <br>
             <br>
@@ -122,30 +122,36 @@
    The look of the character is important aesthically because it is something that
    makes my end users want to use my low poly character I created. 
    The model should not only be low poly, but resemble the models and limbs and should be
-   seen as what it is meant to be. This also helps me make the models and limbs with more
-   detail as it contributes to the aesthetics and 
+   seen as what it is meant to be. To make the limbs look like limbs, I will make the arms 
+   have fingers and an elbow and the legs have a knee joint and feet.
 <br>
 
 	<h3>Functionality</h3>
     <br>
     <h4>Functionality is about ensuring the outcome works as its meant to.</h4> 
     <br>
-    It should not be buggy and not cause any problems for my end users where they would
+    It should not be "glitchy" and and not cause any problems for my end users where they would
     most likely use it a lot for their project. Any issues would hold their project back
-    and make end users less likely to use my low poly character. I will ensure it is not
-    buggy by running as many scenarios with the rigs as possible and also reviewing the 
-    code by the peer reviewing.
+    and make end users less likely to use my low poly character. I will ensure it does not have glitchy
+    animation by making enough animations that fit with the current scenario asm much as possible and also reviewing the 
+    animation by peer reviewing and seeing what I can do to make it even more smoother or what I missed during the
+    animating phase. 
 <br>
 
 	<h3>Usability</h3>
     <br>
     <h4>Usability is about making the outcome easy to use. </h4>
     <br>
-    Using my low poly character for your own project should be easy as pie for my end users. 
-    The instructions and the use of the low poly character is easy to understand and use. To 
-    ensure this, I will have the rigs as simple and easy to understand with minimal buggy code.
+    Using my low poly character for your own project should be easy as for my end users. 
+    The instructions and the use of the low poly character is easy to understand and use. 
     
+    <h3>Intellectual Property</h3>
+    <br>
+    <h4>I forgor</h4> 
+    <br>
+    My low poly character will be its own Intellectual property and I will ensure to copyright 
 
+<br>
 
         </p>
     </div>
