FIUJNSIEHD DESIGN CONSICASIDERSAD

--- a/project1.html
+++ b/project1.html
@@ -147,9 +147,11 @@
     
     <h3>Intellectual Property</h3>
     <br>
-    <h4>I forgor</h4> 
+    <h4> Something or a property owned and legally protected by the rightful Owner.</h4> 
     <br>
-    My low poly character will be its own Intellectual property and I will ensure to copyright 
+    My low poly character will be its own Intellectual property by making sure it is original. I will still have some
+    ideas and thoughts from other models but will make a way to make it original by me. A way can I do it is by having
+    a special symbol on the character that no other character has. 
 
 <br>
 
