Low Poly Character Implicartions

--- a/project1.html
+++ b/project1.html
@@ -39,7 +39,7 @@
         <img id="JeskoAttack" src="JeskoAttack.jpg" alt="placeholder img">
         <p id="enduserslink"> 
             For this project, the goal is to make a low poly character that has a rig to be able to be animated easily 
-            and to be used for many different projects like games or animations. The low poly character will be someone 
+            and to be used for many different projects like games or animations. The low poly character will be a strong character 
             wielding a blade or even a shield which will be rigged with the character. It will help me understand
             how to have two different models in a character and also a way to choreograph fight scene animations in the future.
             
@@ -61,7 +61,6 @@
         <p> <h3>Torso</h3>
             <br>
             Main part of the rig <br>
-            Could have a shirt but depends so far <br>
             Model is easy to understand from another persons' view <br>
             Wearable armor can go on the Torso <br>
             <br>
@@ -123,7 +122,11 @@
    makes my end users want to use my low poly character I created. 
    The model should not only be low poly, but resemble the models and limbs and should be
    seen as what it is meant to be. To make the limbs look like limbs, I will make the arms 
-   have fingers and an elbow and the legs have a knee joint and feet.
+   have fingers and an elbow and the legs have a knee joint and feet. To make the character
+   even more aesthetic, I can make the character have strong muscles that really shows how 
+   strong the character is. The blade and shield that the character wields with should 
+   have enough detail to make it look menacing and to flow with the low poly characters'
+   aesthetics.
 <br>
 
 	<h3>Functionality</h3>
@@ -143,7 +146,13 @@
     <h4>Usability is about making the outcome easy to use. </h4>
     <br>
     Using my low poly character for your own project should be easy as for my end users. 
-    The instructions and the use of the low poly character is easy to understand and use. 
+    I can do this by having a rig that flows and match the ligament joints of my low poly character's limbs. It should also
+    be clear where the joints are so my end users know where the animation rig is going to be. For my end users who want to 
+    create a game using my low poly character, the animations must be fluidly smooth and nice to look at. I can do this by
+    taking my time to animate and asking for feedback on what I can do to improve upon the animation. When the animation is 
+    finished, I will name the animation corresponding to what the low poly character is doing. For example, if my character
+    is running, I will name it "Character_Run_1". I will do the same for all the other animations I will do like jumping, walking,
+    attacking and defending. 
     
     <h3>Intellectual Property</h3>
     <br>
@@ -151,7 +160,8 @@
     <br>
     My low poly character will be its own Intellectual property by making sure it is original. I will still have some
     ideas and thoughts from other models but will make a way to make it original by me. A way can I do it is by having
-    a special symbol on the character that no other character has. 
+    a special symbol on the character that no other character has. But to protect it from others using it without my 
+    permission, I will license and copyright my low poly character and everything that comes with the model.
 
 <br>
 
