Development for Turnaround - 75%

--- a/project1.html
+++ b/project1.html
@@ -36,7 +36,7 @@
         </div>
     <div id="text" class="overview">
         <h1>Overview</h1>
-        <img id="JeskoAttack" src="JeskoAttack.jpg" alt="placeholder img">
+        <img id="JeskoAttack" src="turnaround_images/turnariynd update.jpg" alt="placeholder img">
         <p id="enduserslink"> 
             For this project, the goal is to make a low poly character that has a rig to be able to be animated easily 
             and to be used for many different projects like games or animations. The low poly character will be a strong character 
