WORKING ON DEVLEOPMENT MODELING AND ANIMATINO

--- a/development1.html
+++ b/development1.html
@@ -138,14 +138,18 @@
     <div id="text" class="task">
         <h1 id="2developmentlink"> Development - Modelling </h1>
         <img src="" alt="">
-        <p> 
+        <p> For Modelling, I focused more on the Torso. The reason is that it is the more important part of the model, with it being 
+            more noticeable than the other parts of the model. The Torso will also define the strength and power of the character.
+            By doing this, I can achieve my goal of requiring a very muscular model.
         </p>
 
         <div id="spacer" ></div> <br> <br>
          
 
         <img src="" alt="">
-             <p>  </p>
+             <p> For the torso, I wanted to make it look strong, so by making the points of the chest more extruded and exaggerated, 
+                I can help exaggerate its muscular aura and vibe that it should give out. Then, I make the proportions slimmer to tell
+            that my character is fit and strong! </p>
              <div id="spacer" ></div>
     </div>
 
