FINSIHED DEVLOEOPEN TN

--- a/development1.html
+++ b/development1.html
@@ -188,12 +188,16 @@
 
 <div id="text" class="task">
     <h1 id="2implicationsLink"> Implications </h1>
-    <img src="" alt="">
-        <p> </p>
+    <img src="model_images/NewModelFront.PNG" alt="Model Image - Front View New">
+        <p> From the front, I removed the chest that makes it look like a woman, but I kept the strength by adding a little
+            bump off of it to make sure my model shows off its muscles on its chest. I also increased the stomach proportions
+            a bit more as it looked like a very skinny but fit girl. 
+        </p>
 <br>
                 <div id="spacer" ></div>
-    <img src="" alt="">
-         <p> 
+    <img src="model_images/NewModelSide.PNG" alt="Model Image - Side View New">
+         <p> You see more of the chest here, still a bit of an extruded chest but looks more muscular now! The proportions of the
+            stomach can be seen more clearly as well. 
          </p>
          <div id="spacer" ></div>
 
@@ -244,11 +248,12 @@
 
 <div id="text" class="task">
     <h1 id="3implicationsLink"> Implications </h1>
-    <img src="" alt="">
-        <p> </p>
+    <img src="animation_images/NewAnimationFront.PNG" alt="Animation Image - Front View New">
+        <p> Not much showing from the images, but I have made it so that the keyframes are more closer together so it looks like
+            my model is running fast and swift! I also fixed the footing as it seemed to be clipping through the floor. </p>
 <br>
                 <div id="spacer" ></div>
-    <img src="" alt="">
+    <img src="animation_images/NewAnimationBack.PNG" alt="Animation Image - Back View New">
          <p> 
          </p>
          <div id="spacer" ></div>
