--- a/development2.html
+++ b/development2.html
@@ -28,7 +28,7 @@
         <br>
         <div class="vertical-menu">
             <h1 > Shortcut </h1>
-            <a href="#developmentlink">1. Development</a>
+            <a href="#developmentlink">1. Dictionary for Options - Development</a>
             <a href="#Testinglink">2. Testing</a>
             <a href="#Feedbacklink">3. Feedback</a>
             <a href="#ImplicationsLink">4. Implications</a>
@@ -38,9 +38,10 @@
             <a href="#">8. 8</a>
             <a href="#">9. 9</a>
         </div>
+    <!-- Development Section for Dictionary for Options --> 
         <div id="text" class="task">
             <h1>  </h1>
-            <img id="JeskoAttack" src="JeskoAttack.jpg" alt="placeholder">
+            <img id="JeskoAttack" src="txtadvntre_images/txtadvntreDictionary.PNG" alt="placeholder">
             <p> I did this task look</p>
                 
         </div>
