--- a/project2.html
+++ b/project2.html
@@ -36,7 +36,7 @@
         </div>
     <div id="text" class="overview">
         <h1>Overview</h1>
-        <img id="JeskoAttack" src="TextAdventure.png" alt="Example of a Text Adventure Game">
+        <img id="JeskoAttack" src="txtadvntre_images/TextAdventure.png" alt="Example of a Text Adventure Game">
         <p id="enduserslink">This project is made in groups and the goal is to create a text adventure game in a group. I am with Steffen, and the
             text adventure game will be made with . The game itself will be an adventure through an abandoned island after being 
             left stranded on a prisoner ship; the goal with being to survive long enough to escape.
