3 things I did for devleopemtn (not fin)

--- a/development2.html
+++ b/development2.html
@@ -28,15 +28,19 @@
         <br>
         <div class="vertical-menu">
             <h1 > Shortcut </h1>
-            <a href="#developmentlink">1. Dictionary for Options - Development</a>
-            <a href="#Testinglink">2. Testing</a>
-            <a href="#Feedbacklink">3. Feedback</a>
-            <a href="#ImplicationsLink">4. Implications</a>
-            <a href="#">5. 5</a>
-            <a href="#">6. 6</a>
-            <a href="#">7. 7</a>
-            <a href="#">8. 8</a>
-            <a href="#">9. 9</a>
+            <a href="#1developmentlink">1a. Intro inputs - Development</a>
+            <a href="#1Testinglink">2a. Testing</a>
+            <a href="#1Feedbacklink">3a. Feedback</a>
+            <a href="#1ImplicationsLink">4a. Implications</a>
+            <a href="#2developmentlink">1b. Game inputs - Development</a>
+            <a href="#2Testinglink">2b. Testing</a>
+            <a href="#2Feedbacklink">3b. Feedback</a>
+            <a href="#2ImplicationsLink">4b. Implications</a>
+            <a href="#3developmentlink">1c. Utilizing def() function for Game inputs - Development</a>
+            <a href="#3Testinglink">2c. Testing</a>
+            <a href="#3Feedbacklink">3c. Feedback</a>
+            <a href="#3ImplicationsLink">4c. Implications</a>
+        
         </div>
     <!-- Development Section for Dictionary for Options --> 
         <div id="text" class="task">
