--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         </button>
         <div class="dropdown-content">
         <a href="project1.html">Project 1</a>
-        <a href="#">Project 2</a>
-        <a href="#">Project 3</a>
+        <a href="project2.html">Project 2</a>
+        <a href="project3.html">Project 3</a>
         <a href="index.html"> Home </a>
         </div>
 </ul>
