almsot odne im tired

--- a/development2.html
+++ b/development2.html
@@ -399,10 +399,17 @@
             that follows the define function so I will impliment that as well. <br>
             Here is how the outcome of the fight will look like: <br> <br> <br> <br> <br> <br>
             </p>
-
+            <img id="JeskoAttack" src="txtadvntre_images/boarattack/txtadventureboarattack9.PNG" alt="First Input from User">
+            <img id="JeskoAttack" src="txtadvntre_images/boarattack/txtadventureboarattack5.PNG" alt="Second Input from User">
             <img id="JeskoAttack" src="txtadvntre_images/boarattack/txtadventureboarattack9.PNG" alt="First Input from User">
         <p> If boarattackoutcome = "wins" <br>
+            Expected: For this scenario, it should output a string of text saying that you won the fight and now you're eating the
+            boar because you're hungry and after this, it leads you to a different scenario at the beach cave. <br>
              </p>
+            <p> If boarattackoutcome = "lose" <br>
+                Expected: You will die from the boar attack. Pretty simple and variables "ending" and "ending_scenario" will change
+                to the bad ending and the game will end. <br>
+                 </p>
             <img id="JeskoAttack" src="" alt="Output from First Input">
                 <div id="spacer" ></div>
     <img id="JeskoAttack" src="txtadvntre_images/boarattack/txtadventureboarattack5.PNG" alt="Second Input from User">
@@ -435,7 +442,7 @@
                 <img id="JeskoAttack" src="" alt="Output from First Input">
                     <div id="spacer" ></div>
         <img id="JeskoAttack" src="" alt="Second Input from User">
-        <p> Input from User: C <br>
+        <p> Input from User: A <br>
             </p>
             <img id="JeskoAttack" src="" alt="Output from Second Input">
         <br>
