fixed project names

--- a/project2.html
+++ b/project2.html
@@ -9,14 +9,14 @@
 <body>
     <div class="navbar">
 <ul>
-    <li><a class="navbar2" href="project1.html"> Project 2 </a></li>
+    <li><a class="navbar2" href="project1.html"> Text Adventure Game </a></li>
     <div style="float:right" id="projectdropdown" class="dropdown">
         <button class="dropbtn">Projects
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-            <a href="project1.html">Project 1</a>
-            <a href="project2.html">Project 2</a>
+            <a href="project1.html">Low Poly Char.</a>
+            <a href="project2.html">Txt Adv. Game</a>
             <a href="project3.html">Project 3</a>
             <a href="index.html"> Home </a>
         </div>
@@ -24,7 +24,7 @@
     <br>
     <div class="header">
         <h1> Project 2</h1>
-        <h4> Text Adventure Game</h4>
+        <h4> Text Adventure Game </h4>
         </div>
         <div class="vertical-menu">
             <h1 > Shortcut </h1>
