--- a/development3.html
+++ b/development3.html
@@ -15,8 +15,8 @@
                   <i class="fa fa-caret-down"></i>
                 </button>
                 <div class="dropdown-content">
-            <a href="project1.html">Project 1</a>
-            <a href="project2.html">Project 2</a>
+            <a href="project1.html">Low Poly Char.</a>
+            <a href="project2.html">Txt Adv. Game</a>
             <a href="project3.html">Project 3</a>
             <a href="index.html"> Home </a>
                 </div>
