--- a/development2.html
+++ b/development2.html
@@ -400,54 +400,32 @@
             Here is how the outcome of the fight will look like: <br> <br> <br> <br> <br> <br>
             </p>
             <img id="JeskoAttack" src="txtadvntre_images/boarattack/txtadventureboarattack9.PNG" alt="First Input from User">
-            <img id="JeskoAttack" src="txtadvntre_images/boarattack/txtadventureboarattack5.PNG" alt="Second Input from User">
-            <img id="JeskoAttack" src="txtadvntre_images/boarattack/txtadventureboarattack9.PNG" alt="First Input from User">
         <p> If boarattackoutcome = "wins" <br>
             Expected: For this scenario, it should output a string of text saying that you won the fight and now you're eating the
             boar because you're hungry and after this, it leads you to a different scenario at the beach cave. <br>
-             </p>
+             </p> <img id="JeskoAttack" src="txtadvntre_images/boarattack/txtadventureboarattack5.PNG" alt="Second Input from User">
             <p> If boarattackoutcome = "lose" <br>
                 Expected: You will die from the boar attack. Pretty simple and variables "ending" and "ending_scenario" will change
                 to the bad ending and the game will end. <br>
-                 </p>
-            <img id="JeskoAttack" src="" alt="Output from First Input">
-                <div id="spacer" ></div>
-    <img id="JeskoAttack" src="txtadvntre_images/boarattack/txtadventureboarattack5.PNG" alt="Second Input from User">
-    <p> Input from User: A <br>
-        </p>
-        <img id="JeskoAttack" src="" alt="Output from Second Input">
+                 
 
     <!-- Testing the Implications Section for Utilizing def() function for Boar Attack --> 
 <div id="text" class="task">
     <h1> Testing the Implications</h1>
-    <img id="JeskoAttack" src="" alt="First Input from User">
-        <p> Input from User: B <br>
+    <img id="JeskoAttack" src="txtadvntre_images/boarattack/txtadventureboarattack10.PNG" alt="First Input from User">
+        <p> Input from User: Attack, Defend until User Health is less than 0 Health <br>
+            Expected: It ends the boar attack code and goes into the next stage of the code.<br>
+            Outcome:
              </p>
-            <img id="JeskoAttack" src="" alt="Output from First Input">
+            <img id="JeskoAttack" src="txtadvntre_images/boarattack/txtadventureboarattack11.PNG" alt="Output from First Input">
                 <div id="spacer" ></div>
-    <img id="JeskoAttack" src="" alt="Second Input from User">
-    <p> Input from User: A <br>
+    <img id="JeskoAttack" src="txtadvntre_images/boarattack/txtadventureboarattack12.PNG" alt="Second Input from User">
+    <p> Input from User: Attack, Defend until Boar Health is less than 0 Health <br>
+        Expected: It ends the boar attack code and goes into the next stage of the code. <br>
+        Outcome:
         </p>
-        <img id="JeskoAttack" src="" alt="Output from Second Input">
+        <img id="JeskoAttack" src="txtadvntre_images/boarattack/txtadventureboarattack13.PNG" alt="Output from Second Input">
         <div id="spacer" ></div>
-        <img id="JeskoAttack" src="" alt="Second Input from User">
-        <p> 
-        </p>
-        <div id="spacer" ></div>
-        <!-- Testing AGAIN the Implications Section for Utilizing def() function for Boar Attack --> 
-        <h1> Testing the Implications to make sure AGAIN</h1>
-        <img id="JeskoAttack" src="" alt="First Input from User">
-            <p> Input from User: B <br>
-                </p>
-                <img id="JeskoAttack" src="" alt="Output from First Input">
-                    <div id="spacer" ></div>
-        <img id="JeskoAttack" src="" alt="Second Input from User">
-        <p> Input from User: A <br>
-            </p>
-            <img id="JeskoAttack" src="" alt="Output from Second Input">
-        <br>
-        <br>
-    </div>
     </div>
             <video autoplay muted loop id="myVideo">
                 <source src="Porsche 911 992 GT3RS 2.mp4" type="video/mp4">
